@@ -22,6 +22,7 @@ import static java.nio.charset.StandardCharsets.UTF_8;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
@@ -118,7 +119,7 @@ public class AccessExpressionBenchmark {
     }
 
     public List<EvaluatorTests> getEvaluatorTests() {
-      return List.copyOf(evaluatorTests);
+      return Collections.unmodifiableList(evaluatorTests);
     }
 
   }
